fix: add CodeQL model extensions for custom sanitizers and restore workflow
- Declare MiniFile.sanitizeFileName, createBaseFile, validateFileAccess
  as path-traversal sanitizers
- Declare RPCClient.validateAndResolveURI and
  MySQLConnect.validateAndResolveHost as SSRF sanitizers
- Use Path.normalize() in createBaseFile and validateFileAccess
  (CodeQL built-in path sanitizer)
- Restructure RPCClient to use URI-based validation
- Restructure GenerateKey.getCipherSYM to default to fresh IV
- Restore CodeQL workflow with java-kotlin language